force-app/main/default/objects/Invoice_Line_Item__c/Invoice_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Hospital Management System object for Invoice Line Item.</description>
    <label>Invoice Line Item</label>
    <nameField>
        <displayFormat>INVLINE-{00000}</displayFormat>
        <label>Invoice Line</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>