force-app/main/default/objects/Invoice_Line_Item__c/fields/Admission__c.field-meta.xml
<CustomField>
    <fullName>Admission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Admission</label>
    <referenceTo>Admission__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>