force-app/main/default/objects/Invoice_Line_Item__c/fields/Appointment__c.field-meta.xml
<CustomField>
    <fullName>Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appointment</label>
    <referenceTo>Appointment__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>