force-app/main/default/objects/Invoice_Line_Item__c/fields/Bed_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Bed_Allocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bed Allocation</label>
    <referenceTo>Bed_Allocation__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>