force-app/main/default/objects/Invoice_Line_Item__c/fields/Charge_Type__c.field-meta.xml
<CustomField>
    <fullName>Charge_Type__c</fullName>
    <label>Charge Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Appointment</fullName>
            </value>
            <value>
                <fullName>Accommodation</fullName>
            </value>
            <value>
                <fullName>Clinical Service</fullName>
            </value>
            <value>
                <fullName>Insurance Deduction</fullName>
            </value>
            <value>
                <fullName>Subsidy</fullName>
            </value>
            <value>
                <fullName>Admission</fullName>
            </value>
            <value>
                <fullName>Room</fullName>
            </value>
            <value>
                <fullName>Bed</fullName>
            </value>
            <value>
                <fullName>Consultation</fullName>
            </value>
            <value>
                <fullName>Lab Test</fullName>
            </value>
            <value>
                <fullName>Medicine</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>