force-app/main/default/objects/Invoice_Line_Item__c/fields/Line_Item_Key__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Key__c</fullName>
    <externalId>true</externalId>
    <label>Line Item Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>