force-app/main/default/objects/Invoice_Line_Item__c/fields/Line_Total__c.field-meta.xml
<CustomField>
    <fullName>Line_Total__c</fullName>
    <label>Line Total</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>