force-app/main/default/objects/Invoice_Line_Item__c/fields/Medicine__c.field-meta.xml
<CustomField>
    <fullName>Medicine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Medicine</label>
    <referenceTo>Medicine__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>