force-app/main/default/objects/Invoice_Line_Item__c/fields/Patient_Service__c.field-meta.xml
<CustomField>
    <fullName>Patient_Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient Service</label>
    <referenceTo>Patient_Service__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>