force-app/main/default/objects/Invoice_Line_Item__c/fields/Source_Record__c.field-meta.xml
<CustomField>
    <fullName>Source_Record__c</fullName>
    <formula>IF(ISBLANK(Source_Record_Id__c), &quot;&quot;, HYPERLINK(&quot;/&quot; &amp; Source_Record_Id__c, &quot;View Source Record&quot;, &quot;_self&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Record</label>
    <type>Text</type>
</CustomField>